--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>cailh的网站</title>
 </head>
 <body>
+    <img src="logo.png">
     <h1>cailh的网站</h1>
     <h3>首页</h3>
     <p>这是我的网站，现在还没什么。</p>
